--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.6
   table_calendar: ^3.0.2
+  flutter_calendar_carousel: ^2.0.3
 
 dev_dependencies:
   flutter_test:
