--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -24,6 +24,12 @@ dependencies:
   shared_preferences: ^2.0.6
   table_calendar: ^3.0.2
   flutter_calendar_carousel: ^2.0.3
+  url_launcher: ^6.0.9
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/logo.png"
 
 dev_dependencies:
   flutter_test:
